--- a/view/admin/hotel.ejs
+++ b/view/admin/hotel.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/admin') %>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 <div class="mt-5 w-75" style="margin-left:15%;">
   <div class="container-fluid px-4 py-4">
